# mcjoin

./: .gitignore  .travis.yml  AUTHORS  ChangeLog.md  Dockerfile  LICENSE  Makefile  Makefile.am  README.md  TODO  addr.c  addr.h  configure.ac  log.c  mcjoin.1  mcjoin.c
.github/: CONTRIBUTING.md
.github/workflows/: build.yml  container.yml  coverity.yml  release.yml
debian/: README.Debian  changelog  control  copyright  dirs  mcjoin.links  mcjoin.lintian-overrides  postinst  rules
debian/source/: lintian-overrides
doc/: INTEROP.md  TODO
lib/: .gitignore
src/: .gitignore  Makefile.am  addr.c  addr.h  daemonize.c  inetaddr.c  inetaddr.h  inetaddr.sh  log.c  log.h  mcjoin.c  mcjoin.h  receiver.c  screen.c  screen.h  sender.c
